# fpl-simulation

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  SUPABASE_SETUP.md  main.py  project_description.md  pyproject.toml  requirements.txt  schema.sql  schema_medallion.sql  schema_unified.sql
.github/workflows/: ci.yml  fetch_understat.yml  pipeline.yml  pr-agent-trigger.yml
.streamlit/: config.toml  secrets.toml.example
01_Sprints/00_Sprint_0_Foundation/: SPRINT0-001_Project_Initialization.md  SPRINT0-002_Dependency_Management.md  SPRINT0-003_Precommit_Hooks.md  SPRINT0-004_Directory_Structure.md  SPRINT0-005_Database_Schema.md  (+3 more)
docs/: ML_SIMULATION_SPEC.md  PROJECT_DOCUMENTATION.md  SILVER_LAYER_PIPELINE.md  unified_ids_execution_plan.md  unified_player_stats_schema.md
scripts/: add_fpl_missing_columns.sql  add_understat_all_columns.sql  add_understat_missing_columns.sql  backfill_silver_player_state.py  backfill_silver_player_state_current_season.py  check_sql_access.py  check_team_mapping.py  clear_match_mapping.py  create_metadata_table.sql  create_silver_player_mapping.sql  daily_bronze_update.py  daily_pipeline.py  daily_silver_update.py  daily_team_mapping_update.py  debug_overlaps.py  debug_team_names.py  debug_team_overlap.py  debug_vaastav.py  fix_match_mapping_table.py  fix_understat_gameweek.sql  fix_understat_pk.sql  fix_understat_schema.sql  pipeline_metrics.py  populate_silver_match_mapping.py  temp_migration.sql  test_insert.py
src/: __init__.py  config.py
tests/: __init__.py  test_cleaning_integration.py  test_config.py  test_contextual_features.py  test_data.py  test_data_integration.py  test_dataset_builder.py  test_delete_by_season.py  test_event_simulator.py  test_features.py  test_form_fixture.py  test_fpl_scoring.py  test_h2h_metrics.py  test_home_away_h2h.py  test_hyperparameter_optimizer.py  test_impute.py  test_ingest_pipeline.py  test_ingestion_e2e.py  test_integration.py  test_lightgbm_model.py  test_match_simulator.py  test_mlflow_client.py  test_model_evaluation.py  test_models.py  test_monitoring.py  test_name_resolver.py  test_player_mapping.py  test_projection_ranking.py  test_rolling_features.py  test_safe_upsert.py  test_shot_features.py  test_silver_player_mapping.py  test_starting_xi.py  test_team_mappings.py  test_team_optimizer.py  test_understat.py  test_utils.py  test_vaastav.py  test_validate.py  test_xi_dataset_builder.py  (+2 more)
(+255 files in other folders)
